@@ -1,1 +1,3 @@
-from .db_api import APIInterrogator  # noqa: F401
+# flake8: noqa: F401
+from .db_api import APIInterrogator
+from .extract import DBExtract
