@@ -21,12 +21,12 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab_browse">
        <attribute name="icon">
         <iconset theme="globe">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>Public Data</string>
@@ -108,68 +108,43 @@
        </layout>
       </widget>
       <widget class="QWidget" name="tab_user">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
        <attribute name="icon">
         <iconset theme="street-view">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>My Data</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_6">
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QLineEdit" name="user_search">
-            <property name="placeholderText">
-             <string>Search my data on DCOR...</string>
-            </property>
-            <property name="clearButtonEnabled">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <property name="topMargin">
            <number>0</number>
           </property>
           <item>
-           <widget class="QComboBox" name="comboBox">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <widget class="QCheckBox" name="checkBox_user_owned">
+            <property name="text">
+             <string>uploaded by me</string>
             </property>
-            <item>
-             <property name="text">
-              <string>Private and public data</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Public data only</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Private data only</string>
-             </property>
-            </item>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="checkBox_2">
+           <widget class="QCheckBox" name="checkBox_user_shared">
             <property name="text">
-             <string>Include data shared with me</string>
+             <string>shared with me</string>
+            </property>
+            <property name="checked">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="checkBox_user_following">
+            <property name="text">
+             <string>followed by me</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -188,6 +163,13 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_user_refresh">
+            <property name="text">
+             <string>Update</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -216,7 +198,7 @@
        </property>
        <attribute name="icon">
         <iconset theme="people-arrows">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>Sharing</string>
@@ -353,7 +335,7 @@
       <widget class="QWidget" name="tab_upload">
        <attribute name="icon">
         <iconset theme="upload">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>Uploads</string>
@@ -379,7 +361,7 @@
       <widget class="QWidget" name="tab_download">
        <attribute name="icon">
         <iconset theme="download">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>Downloads</string>
@@ -405,7 +387,7 @@
       <widget class="QWidget" name="tab_maintain">
        <attribute name="icon">
         <iconset theme="broom">
-         <normaloff>.</normaloff>.</iconset>
+         <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
        </attribute>
        <attribute name="title">
         <string>Maintenance</string>
@@ -453,7 +435,7 @@
   <action name="actionSoftware">
    <property name="icon">
     <iconset theme="code-branch">
-     <normaloff>.</normaloff>.</iconset>
+     <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
    </property>
    <property name="text">
     <string>Software</string>
@@ -467,7 +449,7 @@
   <action name="actionQuit">
    <property name="icon">
     <iconset theme="times-circle">
-     <normaloff>.</normaloff>.</iconset>
+     <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
    </property>
    <property name="text">
     <string>Quit</string>
@@ -481,7 +463,7 @@
   <action name="actionPreferences">
    <property name="icon">
     <iconset theme="cogs">
-     <normaloff>.</normaloff>.</iconset>
+     <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
    </property>
    <property name="text">
     <string>Preferences...</string>
@@ -490,7 +472,7 @@
   <action name="actionAbout">
    <property name="icon">
     <iconset theme="info">
-     <normaloff>.</normaloff>.</iconset>
+     <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
    </property>
    <property name="text">
     <string>About</string>
@@ -499,7 +481,7 @@
   <action name="actionSetupWizard">
    <property name="icon">
     <iconset theme="hat-wizard">
-     <normaloff>.</normaloff>.</iconset>
+     <normaloff>../../../../.designer/backup</normaloff>../../../../.designer/backup</iconset>
    </property>
    <property name="text">
     <string>Setup wizard...</string>
